# Rhine-Vault

./: .editorconfig  .gitignore  .pre-commit-config.yaml  PACKAGE_MANIFEST.json  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/architecture/: 00_START_HERE.md  ACCEPTANCE_CRITERIA.md  ACTOR_PERMISSION_MODEL.md  API_MCP_CONTRACT.md  ARCHITECTURE_CONTRACT.md  BACKUP_AND_RECOVERY.md  CHUNKING_SPEC.md  CONTEXT_BUNDLE.md  CROSS_WORKSPACE_AND_LIBRARIES.md  DECISION_LOG.md  DOMAIN_MODEL.md  EXTERNAL_CHANGE_WORKFLOW.md  IMPLEMENTATION_RISKS.md  KNOWLEDGE_CAPTURE.md  LIBRARY_VERSIONING.md  OBSIDIAN_INTEGRATION.md  PRODUCT_LAYERS.md  RANKING_AND_RERANKING.md  RELATION_CONSISTENCY.md  RETRIEVAL_PROFILES.md  SCHEMA_AND_MIGRATION.md  SCOPE_MATRIX.md  SECURITY_AND_GUARDRAILS.md  STORAGE_AND_INDEXING.md  V1_SCOPE.md  VERSIONING_AND_GIT.md
docs/implementation/: CMCC_RHINE_INTEGRATION_PLAN.md  CONSISTENCY_CHECK.md  CURRENT_PHASE.md  FIRST_USABLE_VERSION.md  NOVEL_STUDIO_PLUGIN.md  PHASE_0_1_CHECKLIST.md  PHASE_1_5_VERTICAL_SLICE.md  PHASE_2_FORMAL_WORKFLOW.md  PHASE_3_FORMAL_RETRIEVAL.md  PHASE_4_FORMAL_UI_MCP.md  PHASE_5_INDEXING_AND_LIBRARIES.md  PHASE_6_VECTOR_MIGRATION_RECOVERY.md  PROJECT_STYLE_STANDARD_TEMPLATE.md  ROADMAP.md  STYLE_ADOPTION.md  UI_PANEL_MIGRATION.md  WEBUI_PLUGIN_CONCEPTS.md
examples/: example-node.md  example-staging-node.md
schemas/: memory-node.schema.yaml
src/rhine_vault/: __init__.py  context.py  core.py  document_loaders.py  graph.py  i18n.py  llm.py  logger.py  mcp_bridge.py  mcp_server.py  node_types.py  novel_studio.py  recovery.py  retrieval.py  runtime_paths.py  vector.py  vector_backends.py  webui_plugins.py
src/rhine_vault/api/: __init__.py  app.py
src/rhine_vault/capture/: __init__.py  rules.py  service.py
tests/: test_chunking.py  test_document_loaders.py  test_entrypoints.py  test_ids_and_models.py  test_markdown_frontmatter.py  test_novel_studio.py  test_paths.py  test_phase_1_5_vertical_slice.py  test_phase_3_retrieval.py  test_phase_4_mcp.py  test_phase_5_indexing_libraries.py  test_phase_6_recovery.py  test_phase_6_vector.py  test_ptilopsis_seed.py
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.vue  api.ts  main.ts  styles.css
(+37 files in other folders)
